--- a/app/views/shared/_guest_tab.html.haml
+++ b/app/views/shared/_guest_tab.html.haml
@@ -1,6 +1,3 @@
 .user_tab
-  .button-container
-    = link_to '<button type="button" class="btn btn-primary btn-standard">Login</button>'.html_safe, new_user_session_path
-  .button-container
-    = link_to '<button type="button" class="btn btn-primary btn-standard">Register</button>'.html_safe, new_user_registration_path
-
+  = link_to 'Login', new_user_session_path, class: 'btn btn-primary my-2 my-sm-0'
+  = link_to 'Register', new_user_registration_path, class: 'btn btn-primary my-2 my-sm-0'
