--- a/app/views/shared/_user_tab.html.haml
+++ b/app/views/shared/_user_tab.html.haml
@@ -1,5 +1,7 @@
 .user_tab
   .button-container
     %strong.mr-2 Welcome #{current_user.email}
-    = link_to 'Shared a movie', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0 mr-2', method: :delete
+    = link_to 'Share a movie', new_movie_path, class: 'btn btn-secondary my-2 my-sm-0 mr-2', "data-target" => "#share-modal", "data-toggle" => "modal", type: 'button'
+    -# = link_to 'Share a movie', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0 mr-2', method: :delete
     = link_to 'Sign out', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0', method: :delete
+    = render 'movies/share_movie'
