--- a/app/views/movies/_toggle_like_dislike.html.haml
+++ b/app/views/movies/_toggle_like_dislike.html.haml
@@ -1,8 +1,8 @@
 = link_to like_movies_path(id: movie.id), method: :post, remote: true do
   %span.like_count.mr-2{class: ('text-secondary')}
-    %i.btn-like-dislike.fa-solid.fa-thumbs-up
+    %i.btn-like-dislike.fa-solid.fa-thumbs-up{class: ('text-primary pointer-events-none' if movie.liked_by?(current_user))}
     = movie.like_count
 = link_to dislike_movies_path(id: movie.id), method: :post, remote: true do
-  %span.dislike_count{class: ('text-secondary'), style: ('pointer-events: none' unless current_user)}
-    %i.btn-like-dislike.fa-solid.fa-thumbs-down
+  %span.dislike_count{class: ('text-secondary')}
+    %i.btn-like-dislike.fa-solid.fa-thumbs-down{class: ('text-primary pointer-events-none' if movie.dislike_by?(current_user))}
     = movie.dislike_count
