--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,4 +1,4 @@
-.listing-container.container
+.mt-4.listing-container
   != pagy_bootstrap_nav(@pagy)
   - @movies.each do |movie|
     = render 'movies/movie_single', movie: movie
