--- a/app/views/shared/_guest_tab.html.haml
+++ b/app/views/shared/_guest_tab.html.haml
@@ -1,3 +1,4 @@
-.user_tab
-  = link_to 'Login', new_user_session_path, class: 'btn btn-primary my-2 my-sm-0'
+.user_tab.d-flex.justify-content-end.align-items-center
+  = link_to 'Login', new_user_session_path, class: 'btn btn-primary my-2 my-sm-0 mr-2'
   = link_to 'Register', new_user_registration_path, class: 'btn btn-primary my-2 my-sm-0'
+  
