--- a/app/views/shared/_user_tab.html.haml
+++ b/app/views/shared/_user_tab.html.haml
@@ -1,7 +1,5 @@
-.user_tab
-  .button-container
-    %strong.mr-2 Welcome #{current_user.email}
-    = link_to 'Share a movie', new_movie_path, class: 'btn btn-secondary my-2 my-sm-0 mr-2', "data-target" => "#share-modal", "data-toggle" => "modal", type: 'button'
-    -# = link_to 'Share a movie', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0 mr-2', method: :delete
-    = link_to 'Sign out', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0', method: :delete
-    = render 'movies/share_movie'
+.user_tab.d-flex.justify-content-end.align-items-center
+  %strong.mr-4 Welcome #{current_user.email}
+  = link_to 'Share a movie', new_movie_path, class: 'btn btn-secondary my-2 my-sm-0 mr-2', "data-target" => "#share-modal", "data-toggle" => "modal", type: 'button'
+  = link_to 'Sign out', destroy_user_session_path, class: 'btn btn-primary my-2 my-sm-0', method: :delete
+  = render 'movies/share_movie'
